--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cookie-parser": "^1.4.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
+    "mongo-sanitize": "^1.1.0",
     "mongoose": "^6.0.11",
     "nanoid": "^3.1.30"
   }
